added text geometry example

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
 				margin: 0;
 				padding: 0;
 			}
+			body {
+				height: 100vh
+			}
+			canvas {
+				background-color: #ffffff;
+			}
 		</style>
 	</head>
 	<body>
